# task8_cpp_Magical_Iterators_b

./: CMakeLists.txt  Test.cpp
sources/: AscendingIterator.cpp  MagicalContainer.cpp  MagicalContainer.hpp  PrimeIterator.cpp  SideCrossIterator.cpp
